[package]
name = "CAP-Model"
version = "0.1.0"
authors = ["YongJoon Joe"]
edition = "2018"

[lib]
name = "cap_model"
path = "src/lib.rs"
edition = "2018"

[dependencies]
argparse = "*"
libmath = "*"
num = "*"
rand = "*"
rust-crypto = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
twox-hash = "*"
